quiz/ingress-jw.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/app-root: /ui/en-US/
  name: jw-ingress
  namespace: quiz
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - jw.c4-soft.com
      secretName: jw-tls
  rules:
  - host: jw.c4-soft.com
    http:
      paths:
      - path: /(ui/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: jw-ui
            port:
              number: 80
      - path: /bff/(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: bff
            port:
              number: 7080
