quiz/ingress-quiz.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/app-root: /ui/
  name: quiz-ingress
  namespace: quiz
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - quiz.c4-soft.com
      secretName: quiz-tls
  rules:
  - host: quiz.c4-soft.com
    http:
      paths:
      - path: /(ui/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: quiz-ui
            port:
              number: 80
      - path: /bff/(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: bff
            port:
              number: 7080
      - path: /(\.well-known/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: quiz-well-known
            port:
              number: 80
